third_party/rust/thiserror/tests/ui/lifetime.stderr
error: non-static lifetimes are not allowed in the source of an error
 --> $DIR/lifetime.rs:5:18
  |
5 | struct Error<'a>(#[from] Inner<'a>);
  |                  ^^^^^^^^^^^^^^^^^
